--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: black;
+  background-color:#FCF8E8;
   padding: 30px;
 }
 
@@ -22,13 +22,15 @@ body {
   justify-content: start;
   width: 650px;
   min-height: 600px;
-  background: white;
+  background:#66BFBF;
   text-align: center;
   margin: 128px auto;
   border-radius: 10px;
   padding-bottom: 32px;
   box-shadow: 0px 10px 15px 15px rgba(0,0,0,0.1);
   overflow: scroll;
+  overflow-y:hidden;
+  overflow-x:hidden;
 }
 
 h1 {
@@ -83,14 +85,21 @@ h1 {
   height: 45px;
   width: 200px;
   border-radius: 4px;
-  margin-top: 7px;
+  margin-top: 15px;
   cursor: pointer;
   outline: none;
-  background: black;
+  background:rgb(51, 51, 51, 0.5);
   color: white;
+  font-size: 20px;
   text-transform: capitalize;
   float: left;
   margin-left: 30px;
+}
+
+.diary-button:hover {
+  transition: all 0.2s;
+  color: black;
+  background-color:#FCF8E8;;
 }
 
 .diary-container {
@@ -108,8 +117,15 @@ h1 {
   border-radius: 5px;
   width: 90%;
   box-shadow: 0px 10px 15px 15px rgba(0,0,0,0.1);
-  background: black;
-  color: white
+  background:rgb(51, 51, 51, 0.5);
+  color: white;
+  font-size:bold;
+}
+
+.diary-row:hover {
+  transition: all 0.2s;
+  color: black;
+  background-color:#FCF8E8;;
 }
 
 .delete {
@@ -117,6 +133,6 @@ h1 {
 }
 
 .date {
-  font-size: 15px;
+  font-size: 20px;
   margin-right: 5px;
 }
